--- a/app.css
+++ b/app.css
@@ -1,3 +1,33 @@
 .ht-tm-header {
     padding-bottom: 240px;
 }
+
+.card {
+    margin-bottom: 20px;
+    /* background-color: white;
+    border-radius: 10px 0 10px 10px; */
+}
+
+.card .corner {
+    position: absolute;
+    background-color: white;
+    top: 0;
+    right: 0;
+    height: 40px;
+    width: 40px;
+}
+
+.card .card-body {
+    height: 14rem;
+    background-color: #32334a;
+    border-radius: 0 50px 0 0;
+}
+
+.card .card-footer {
+    height: 3rem;
+}
+
+.card .card-body p {
+    height: 4.5rem;
+    overflow: hidden;
+}
